--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <div class="container">
     <div class="illustrations">
-      <img class="pattern" src="/images/bg-pattern-desktop.svg">
+      <img class="pattern" src="/images/bg-pattern-desktop.svg" alt="pattern">
       <img class="woman" src="./images/illustration-woman-online-desktop.svg" alt="woman-desktop">
       <img class="box" src="/images/illustration-box-desktop.svg" alt="box">
     </div>
